--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,14 +6,23 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <%= stylesheet_link_tag "tailwind", "inter-font", "data-turbo-track": "reload" %>
-
-    <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
-    <%= javascript_importmap_tags %>
+  <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body>
-    <main class="container mx-auto mt-28 px-5 flex">
+  <body class="bg-gray-100">
+    <!-- Navigation Bar -->
+
+
+    <!-- Main Content -->
+    <main class="container mx-auto mt-10 px-5 flex flex-col">
       <%= yield %>
     </main>
+
+    <!-- Footer -->
+    <footer class="bg-white mt-10 shadow-inner">
+      <div class="container mx-auto py-6 text-center">
+        <p class="text-sm text-gray-500">&copy; 2024 Arkibo. All rights reserved.</p>
+      </div>
+    </footer>
   </body>
 </html>
