--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,20 +1,30 @@
 <div class="bg-white">
-  <div class="mx-auto max-w-2xl px-4 py-16 sm:px-6 sm:py-24 lg:max-w-7xl lg:px-8">
-    <h2 class="sr-only">Explore Our Collection</h2>
+  <div class="mx-auto max-w-7xl px-4 py-16 sm:px-6 sm:py-24 lg:px-8">
+    <h2 class="text-3xl font-extrabold tracking-tight text-gray-900">Explore Our Collection</h2>
 
-<div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6">
-  <% @products.each do |product| %>
-    <a href="<%= product_path(product) %>" class="group">
-      <div class="w-32 h-32 overflow-hidden rounded-lg">
-        <img src="https://thethirteenclub.ca/cdn/shop/files/IMG_8062_05597416-4e18-462e-bd3d-2c9892fd641b_470x.jpg?v=1716855261" alt="Description of your image" class="object-cover w-full h-full">
-      </div>
+    <!-- Category Links -->
+    <!-- Category Links -->
+    <div class="flex flex-wrap items-center justify-center space-x-4 mb-8">
+      <% Category.all.each do |category| %>
+        <%= link_to category.name, products_path(category_id: category.id), class: "px-4 py-2 text-lg font-medium text-gray-700 bg-gray-200 rounded-md hover:bg-gray-300" %>
+      <% end %>
+    </div>
 
-      <div class="mt-4 text-sm text-gray-700"><%= product.name %></div>
-      <div class="mt-1 text-lg font-medium text-gray-900"><%= number_to_currency(product.price) %></div>
-    </a>
-  <% end %>
-</div>
-    
-    <%= paginate @products %>
+    <div class="mt-12 grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6">
+      <% @products.each do |product| %>
+        <a href="<%= product_path(product) %>" class="group block">
+          <div class="w-full aspect-w-1 aspect-h-1 overflow-hidden rounded-lg">
+            <img src="https://thethirteenclub.ca/cdn/shop/files/IMG_8062_05597416-4e18-462e-bd3d-2c9892fd641b_470x.jpg?v=1716855261" alt="Description of your image" class="object-cover w-full h-full">
+          </div>
+
+          <div class="mt-4 text-sm text-gray-700"><%= product.name %></div>
+          <div class="mt-1 text-lg font-medium text-gray-900"><%= number_to_currency(product.price) %></div>
+        </a>
+      <% end %>
+    </div>
+
+    <div class="mt-12">
+      <%= paginate @products %>
+    </div>
   </div>
 </div>
