--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -3,13 +3,16 @@
     <h2 class="text-3xl font-extrabold tracking-tight text-gray-900">Explore Our Collection</h2>
 
     <!-- Category Links -->
-    <!-- Category Links -->
     <div class="flex flex-wrap items-center justify-center space-x-4 mb-8">
       <% Category.all.each do |category| %>
         <%= link_to category.name, products_path(category_id: category.id), class: "px-4 py-2 text-lg font-medium text-gray-700 bg-gray-200 rounded-md hover:bg-gray-300" %>
       <% end %>
     </div>
 
+  <nav>
+    <%= breadcrumbs %>
+  </nav>
+  
     <div class="mt-12 grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6">
       <% @products.each do |product| %>
         <a href="<%= product_path(product) %>" class="group block">
