--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,5 +1,8 @@
 <div class="container mx-auto px-4 py-8">
   <div class="max-w-3xl mx-auto bg-white rounded-lg shadow-lg overflow-hidden">
+      <nav>
+    <%= breadcrumbs %>
+  </nav>
     <div class="px-6 py-4">
       <h1 class="text-3xl font-semibold text-gray-900 mb-4"><%= @product.name %></h1>
       <p class="text-lg text-gray-700 mb-4"><%= @product.description %></p>
