--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -6,6 +6,8 @@
     <div class="hidden md:flex flex-1 justify-center items-center space-x-10">
       <%= link_to 'Home', root_path, class: 'text-lg text-gray-700 hover:text-gray-900' %>
       <%= link_to 'Shop', products_path, class: 'text-m text-gray-700 hover:text-gray-900' %>
+      <%= link_to 'About', about_path, class: 'text-m text-gray-700 hover:text-gray-900' %>
+      <%= link_to 'Contact', contact_path, class: 'text-m text-gray-700 hover:text-gray-900' %>
       <!-- Add other links here when available -->
     </div>
     <div class="hidden md:flex space-x-4 items-center">
