--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -9,8 +9,8 @@
       <div class="flex flex-col md:flex-row justify-between items-center mb-6 space-y-4 md:space-y-0">
         <p class="text-2xl font-semibold text-gray-900">Price: <%= number_to_currency(@product.price) %></p>
         <p class="text-2xl font-semibold text-gray-900">Size: <%= @product.size %></p>
-      </div>
-      <p class="text-lg text-gray-700">Category: <%= @product.category.name %></p>
-    </div>
+  <div>
+    <%= button_to 'Add to Cart', add_to_cart_path(@product.id), method: :post %>
+  </div>
   </div>
 </div>
