added shopping cart function working, trying to have remove function to work.

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -9,6 +9,7 @@
       <%= link_to 'About', about_path, class: 'text-m text-gray-700 hover:text-gray-900' %>
       <%= link_to 'Contact', contact_path, class: 'text-m text-gray-700 hover:text-gray-900' %>
       <%= link_to 'My Profile', profile_path %>
+<%= link_to 'View Cart', show_cart_path %>
       <!-- Add other links here when available -->
     </div>
     <div class="flex flex-1 justify-center md:justify-end items-center space-x-4">
