--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -3,14 +3,19 @@
     <nav class="bg-gray-100 px-6 py-3">
       <%= breadcrumbs %>
     </nav>
+    <% flash.each do |key, value| %>
+  <div class="flash <%= key %>">
+    <%= value %>
+  </div>
+<% end %>
     <div class="px-6 py-8">
       <h1 class="text-4xl font-bold text-gray-900 mb-6"><%= @product.name %></h1>
       <p class="text-lg text-gray-700 mb-6 leading-relaxed"><%= @product.description %></p>
       <div class="flex flex-col md:flex-row justify-between items-center mb-6 space-y-4 md:space-y-0">
         <p class="text-2xl font-semibold text-gray-900">Price: <%= number_to_currency(@product.price) %></p>
         <p class="text-2xl font-semibold text-gray-900">Size: <%= @product.size %></p>
-  <div>
-    <%= button_to 'Add to Cart', add_to_cart_path(@product.id), method: :post %>
-  </div>
+<div>
+  <%= button_to 'Add to Cart', add_to_cart_product_path(product_id: @product.id), method: :post %>
+</div>
   </div>
 </div>
