added proceed to checkout, not fully functional yet

--- a/app/views/cart/show.html.erb
+++ b/app/views/cart/show.html.erb
@@ -39,4 +39,6 @@
   </table>
 
   <%= link_to "Continue Shopping", products_path, class: "text-blue-500 hover:underline mt-4 block" %>
+<%= link_to "Proceed to Checkout", checkout_orders_path, class: "btn btn-primary" %>
+
 </div>
