checkout process added

--- a/app/views/cart/show.html.erb
+++ b/app/views/cart/show.html.erb
@@ -30,8 +30,7 @@
             <div class="text-sm text-gray-900"><%= number_to_currency(cart_item.quantity * cart_item.product.price) if cart_item.product.price && cart_item.quantity %></div>
           </td>
           <td class="px-6 py-4 whitespace-nowrap">
-          <%= button_to 'Remove', remove_cart_item_cart_path(cart_item), method: :delete, data: { confirm: 'Are you sure?' } %>
-
+            <%= button_to 'Remove', remove_item_cart_path(cart_item), method: :delete, data: { confirm: 'Are you sure?' } %>
           </td>
         </tr>
       <% end %>
@@ -39,6 +38,5 @@
   </table>
 
   <%= link_to "Continue Shopping", products_path, class: "text-blue-500 hover:underline mt-4 block" %>
-<%= link_to "Proceed to Checkout", checkout_orders_path, class: "btn btn-primary" %>
-
+  <%= link_to "Proceed to Checkout", checkout_orders_path, class: "btn btn-primary" %>
 </div>
