--- a/app/views/orders/checkout.html.erb
+++ b/app/views/orders/checkout.html.erb
@@ -19,26 +19,25 @@
         <tr>
           <td><%= item.product.name %></td>
           <td><%= item.quantity %></td>
-          <td>$ <%= item.unit_price %></td>
-          <td>$ <%= item.unit_price * item.quantity %></td>
+          <td>$ <%= number_with_precision(item.unit_price, precision: 2) %></td>
+          <td>$ <%= number_with_precision(item.unit_price * item.quantity, precision: 2) %></td>
         </tr>
       <% end %>
     </tbody>
     <tfoot>
       <tr>
         <td colspan="3">Subtotal:</td>
-        <td>$ <%= @order %></td>
+        <td>$ <%= number_with_precision(@subtotal, precision: 2) %></td>
       </tr>
       <tr>
         <td colspan="3">Tax:</td>
-        <td>$ <%= @order %></td>
+        <td>$ <%= number_with_precision(@total_amount - @subtotal, precision: 2) %></td>
       </tr>
       <tr>
         <td colspan="3">Total:</td>
-        <td>$ <%= @order.total_amount %></td>
+        <td>$ <%= number_with_precision(@total_amount, precision: 2) %></td>
       </tr>
     </tfoot>
-
   </table>
 
   <!-- Customer information -->
