--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -15,7 +15,7 @@
         <p class="text-2xl font-semibold text-gray-900">Price: <%= number_to_currency(@product.price) %></p>
         <p class="text-2xl font-semibold text-gray-900">Size: <%= @product.size %></p>
 <div>
-<%= link_to 'Add to Cart', add_cart_path(id: @product.id), method: :post %>
+<%= button_to 'Add to Cart', add_to_cart_product_path(id: @product.id), method: :post %>
 </div>
   </div>
 </div>
