--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,7 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 <!--<%= stylesheet_link_tag 'application', media: 'all', 'data-turbo-track': 'reload' %> -->
+    <%= stylesheet_link_tag "tailwind", "inter-font", "data-turbo-track": "reload" %>
 <%= stylesheet_link_tag "tailwind", "inter-font", "data-turbo-track": "reload" %>
 <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
 <%= javascript_importmap_tags %>
